--- a/.github/workflows/feature-deploy_mynotework.yml
+++ b/.github/workflows/feature-deploy_mynotework.yml
@@ -14,19 +14,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Setup PHP
-
-      uses: shivammathur/setup-php@v2
+    - name: Checkout
+      uses: actions/checkout@v2
       with:
-        php-version: '8.0'
+        path: "sample-page"
+
+      # - name: Setup PHP
+      #   uses: shivammathur/setup-php@v2
+      #   with:
+      #     php-version: '8.0'
+    - name: Setup WP
+      run: docker compose up -d
 
     - name: Check if composer.json exists
       id: check_files
       uses: andstor/file-existence-action@v1
       with:
         files: 'composer.json'
-
     - name: Run composer install if composer.json exists
       if: steps.check_files.outputs.files_exists == 'true'
       run: composer validate --no-check-publish && composer install --prefer-dist --no-progress
