--- a/.github/workflows/feature-deploy_mynotework.yml
+++ b/.github/workflows/feature-deploy_mynotework.yml
@@ -10,55 +10,16 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+    - name: Sync files
+      uses: SamKirkland/FTP-Deploy-Action@4.3.3
       with:
-        path: "sample-page"
-
-      # - name: Setup PHP
-      #   uses: shivammathur/setup-php@v2
-      #   with:
-      #     php-version: '8.0'
-    - name: Setup WP
-      run: docker compose up -d
-
-    - name: Check if composer.json exists
-      id: check_files
-      uses: andstor/file-existence-action@v1
-      with:
-        files: 'composer.json'
-    - name: Run composer install if composer.json exists
-      if: steps.check_files.outputs.files_exists == 'true'
-      run: composer validate --no-check-publish && composer install --prefer-dist --no-progress
-
-    - name: Upload artifact for deployment job
-      uses: actions/upload-artifact@v2
-      with:
-        name: php-app
-        path: .
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-
-    steps:
-    - name: Download artifact from build job
-      uses: actions/download-artifact@v2
-      with:
-        name: php-app
-
-    - name: 'Deploy to Azure Web App'
-      uses: azure/webapps-deploy@v2
-      id: deploy-to-webapp
-      with:
-        app-name: 'MyNoteWork'
-        slot-name: 'Production'
-        publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_B362D891E2A04A18B35751E91A3A5189 }}
-        package: .
+        server: ${{ secrets.FTP_SERVER }}
+        username: ${{ secrets.FTP_USERNAME }}
+        password: ${{ secrets.FTP_PASSWORD }}
+        server-dir: ${{ secrets.FTP_SERVER_DIR }}
